--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ body {
 
 .container {
     padding: 1rem;
+    position: relative;
 }
 
 /* ************** Typography ****************  */
@@ -41,6 +42,7 @@ header {
 .menu-icon {
     width: 40px;
     text-align: center;
+    cursor: pointer;
 }
 
 header .flex-container {
@@ -48,11 +50,84 @@ header .flex-container {
     justify-content: space-between;
 }
 
+header a svg {
+    width: 15px;
+    height: 15px;
+}
+
+.main-menu li {
+    line-height: 85px;
+    margin: 0 25px;
+    border-bottom: 1px solid #e3eaf3;
+    white-space: nowrap;
+}
+
+.main-menu li:last-of-type {
+    border-bottom: none;
+}
+
+.main-menu a {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #f89d70;
+    font-weight: 700;
+    display: block;
+    padding: 0 10px;
+    display: flex;
+    align-items: center;
+}
+
+.main-menu a:hover,
+.main-menu a:active {
+    background-color: #e3eaf3;
+    border-radius: 5px;
+}
+
+.dropdown-menu a {
+    color: #00263e;
+    font-weight: 400;
+    text-transform: none;
+}
+
+.main-menu svg:last-of-type {
+    /* this only works inside a flex container  */
+    margin-left: auto;
+}
+
+.main-menu svg:first-of-type {
+    margin-right: 8px;
+}
+
+/* ********* hide/show dropdowns with hover effect *********  */
+
+.dropdown-menu {
+    max-height: 0;
+    overflow: hidden;
+}
+
+.main-menu li:hover > .dropdown-menu {
+    max-height: initial;
+}
+
+/* ******* hide/show main menu with toggle button ********** */
+nav {
+    max-height: 0;
+    overflow: hidden;
+    position: absolute;
+    left: 0;
+    background-color: #fff;
+    width: 100vw;
+    transition: all .6s ease;
+}
+
+.show-nav {
+    max-height: 100vh;
+}
+
 @media only screen and (min-width: 1300px) {
     .container {
         padding: 1rem 0;
         max-width: 80rem;
         margin: 0 auto;
-
     }
 }
